--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,7 +45,7 @@ dependencies:
   path: ^1.8.3
   
   # Date formatting
-  intl: ^0.18.1
+  intl: ^0.19.0
   
   # Charts for reports
   fl_chart: ^0.66.0
