--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   # Local database
   sqflite: ^2.3.0
   path: ^1.8.3
+  file_picker: ^8.0.0
+  path_provider: ^2.1.3
+  url_launcher: ^6.3.0
+  open_filex: ^4.4.0
+  flutter_file_dialog: ^3.0.2
   
   # Date formatting
   intl: ^0.19.0
