--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   url_launcher: ^6.3.0
   open_filex: ^4.4.0
   flutter_file_dialog: ^3.0.2
+  shared_preferences: ^2.3.2
   
   # Date formatting
   intl: ^0.19.0
