--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: shopping_list
-description: "lista_de_compras"
+description: "MeuGasto app"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -119,6 +119,6 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/logo.ico"
+  image_path: "assets/logo.png"
   adaptive_icon_background: "#4CAF50"
-  adaptive_icon_foreground: "assets/logo.ico"
+  adaptive_icon_foreground: "assets/logo.png"
